chore: Remove unused script tag from 1.html

--- a/google-colab/coding/python-101/1.html
+++ b/google-colab/coding/python-101/1.html
@@ -1,25 +1,18 @@
-<div data-datacamp-exercise data-lang="r">
+<div data-datacamp-exercise data-lang="python">
 	<code data-type="pre-exercise-code">
 		# This will get executed each time the exercise gets initialized
 		b = 6
 	</code>
 	<code data-type="sample-code">
-		# Create a variable a, equal to 5
-
-
-		# Print out a
+		# Remova o # da linha abaixo!
+		# print("Hello World!")
 	</code>
 	<code data-type="solution">
-		# Create a variable a, equal to 5
-		a <- 5
-
-		# Print out a
-		print(a)
+		print("Hello World!")
 	</code>
 	<code data-type="sct">
-		test_object("a")
 		test_function("print")
-		success_msg("Great job!")
+		success_msg("Parabéns! Você imprimiu 'Hello World!' e acabou de rodar seu primeiro código Python!")
 	</code>
-	<div data-type="hint">Use the assignment operator (<code><-</code>) to create the variable <code>a</code>.</div>
+	<div data-type="hint">Remova o # da segunda linha, e veja a mágica acontecer!</div>
 </div>
